fix: introduction to the fair-by-design workflow fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -503,7 +503,7 @@ In conclusion, fairness in AI is not just an ethical necessity but a fundamental
 
 \section{Introduction to the Fair-by-Design Workflow}
 
-This chapter unveils the core of the research—an innovative Fair-by-Design workflow meticulously crafted to address the pressing issue of bias mitigation within AI systems. It is important to note that, among all the techniques presented in the``State of the Art chapter``'', this workflow primarily focuses on the concepts of pre-processing techniques for bias mitigation. 
+This chapter unveils the core of the research—an innovative Fair-by-Design workflow meticulously crafted to address the pressing issue of bias mitigation within AI systems. It is important to note that, among all the techniques presented in the \cref{chap:background}, this workflow primarily focuses on the concepts of pre-processing techniques for bias mitigation. 
 
 The Fair-by-Design concept underlines the commitment to infusing fairness principles into the very fabric of AI development. It signifies the endeavor to create AI systems that are not only technologically proficient but also ethically responsible. 
 
@@ -512,6 +512,8 @@ The Fair-by-Design workflow serves as the linchpin of this research. It guides t
 In the pages that follow, the intricacies of this workflow will be explored, providing a step-by-step elucidation of its various components and how they collectively contribute to the realization of a fair and unbiased AI system. This workflow will not only be a central theme throughout this chapter but also a thread that ties the entire thesis together. It signifies the commitment to addressing bias and promoting fairness within AI systems, particularly in the context of the educational domain. 
 
 The journey will embark on a comprehensive exploration of the Fair-by-Design workflow, with the ultimate goal of mitigating bias, ensuring fairness, and achieving equitable outcomes in AI-driven decision-making.
+
+
 
 %----------------------------------------------------------------------------------------
 \chapter{Validation} % possible chapter for Projects
