fix: data pre-processing title fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -554,7 +554,7 @@ The fairness assessment in the Fair-by-Design workflow is an essential checkpoin
 
 Disparate Impact provides a quantitative measure of the disparate treatment of different groups within the dataset. It assesses the ratio of favorable outcomes for different demographic groups, highlighting potential bias and disparities. This metric serves as a crucial indicator during the data acquisition phase, allowing practitioners to make informed decisions regarding fairness considerations before proceeding to subsequent stages of the machine learning pipeline.
 
-\subsection{Data pre-processing}
+\section{Data pre-processing}
 
 
 
