feat: diagram worfklow created

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -630,6 +630,15 @@ In the realm of fairness assessment, two key metrics, namely \emph{Equalized Odd
 
 The integration of these advanced fairness metrics in the evaluation process enhances the transparency and ethical considerations of the Fair-by-Design workflow. Beyond traditional accuracy metrics, these fairness metrics offer a more nuanced understanding of how the model impacts different demographic groups, promoting a comprehensive evaluation of fairness implications. The upcoming sections will delve into a detailed analysis of the results obtained through the application of these metrics, providing deeper insights into the fairness considerations of the developed machine learning model.
 
+Here's the graphical representation of the presented workflow:
+
+\begin{center}
+
+\includegraphics[width=.2\textwidth, height=0.6\textwidth]{FbD.png}
+
+\end{center}
+
+\newpage
 \section{Fairness pre-processing algorithms}
 \label{section:fairness}
 %----------------------------------------------------------------------------------------
