--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -634,7 +634,7 @@ Here's the graphical representation of the presented workflow:
 
 \begin{center}
 
-\includegraphics[width=.2\textwidth, height=0.6\textwidth]{FbD.png}
+\includegraphics[width=.2\textwidth, height=0.6\textwidth]{fairness-workflow.png}
 
 \end{center}
 
